[package]
name = "bzte"
description = "Baek-Zheng threshold cryptosystem on top of BLS12-381"
documentation = "https://docs.rs/bzte"
repository = "https://github.com/Silur/bzte"
homepage = "https://github.com/Silur/bzte"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
ark-ec = "0.3.0"
sha2 = "0.10.1"
hex = "0.4.3"
rand = "0.8.4"
ark-serialize = "0.3.0"
ark-crypto-primitives = "0.3.0"
serde = {version = "1.0.136", features = ["derive"]}
